fix css overflow issue on mobile

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -421,6 +421,9 @@ ul{
     margin-right: 0;
     padding: 1em;
   }
+  #error-explanation{
+    padding: 5% 5% 5% 10%;
+  }
   #header{
     text-align: center;
   }
